--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,14 +81,14 @@ input, select, textarea {
 		-ms-overflow-style: scrollbar;
 	}
 
-	@media screen and (max-width: 480px) {
+	/* @media screen and (max-width: 480px) {
 
 		html, body {
 			min-width: 320px;
 		}
 
 
-	}
+	} */
 
 	html {
 		box-sizing: border-box;
@@ -123,7 +123,7 @@ input, select, textarea {
 		line-height: 1.75;
 	}
 
-		@media screen and (max-width: 1680px) {
+		/* @media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
 				font-size: 13pt;
@@ -145,7 +145,7 @@ input, select, textarea {
 				font-size: 11pt;
 			}
 
-		}
+		} */
 
 	a {
 		-moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
@@ -235,7 +235,7 @@ input, select, textarea {
 		font-size: 0.6em;
 	}
 
-	@media screen and (max-width: 736px) {
+	/* @media screen and (max-width: 736px) {
 
 		h1 {
 			font-size: 2em;
@@ -261,7 +261,7 @@ input, select, textarea {
 			font-size: 0.6em;
 		}
 
-	}
+	} */
 
 	sub {
 		font-size: 0.8em;
@@ -571,7 +571,7 @@ input, select, textarea {
 					padding-top: 3em;
 				}
 
-		@media screen and (max-width: 1680px) {
+		/* @media screen and (max-width: 1680px) {
 
 			.row {
 				display: flex;
@@ -1320,7 +1320,7 @@ input, select, textarea {
 							display: block;
 						}
 
-		}
+		} */
 
 		/* @media screen and (max-width: 736px) {
 
@@ -1567,7 +1567,7 @@ input, select, textarea {
 
 		} */
 
-		@media screen and (max-width: 480px) {
+		/* @media screen and (max-width: 480px) {
 
 			.row {
 				display: flex;
@@ -1810,7 +1810,7 @@ input, select, textarea {
 							padding-top: 3em;
 						}
 
-		}
+		} */
 
 /* Box */
 
@@ -2191,7 +2191,7 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		@media screen and (max-width: 980px) {
+		/* @media screen and (max-width: 980px) {
 
 			.features {
 				display: block;
@@ -2234,7 +2234,7 @@ input, select, textarea {
 					top: 0;
 				}
 
-		}
+		} */
 
 /* Form */
 
@@ -2284,7 +2284,7 @@ input, select, textarea {
 					width: calc(25% - 0.375em);
 				}
 
-		@media screen and (max-width: 480px) {
+		/* @media screen and (max-width: 480px) {
 
 			form > .fields {
 				width: calc(100% + 3em);
@@ -2308,7 +2308,7 @@ input, select, textarea {
 						width: calc(100% - 1.5em);
 					}
 
-		}
+		} */
 
 	label {
 		color: #ffffff;
@@ -2751,7 +2751,7 @@ input, select, textarea {
 				width: 100%;
 			}
 
-		@media screen and (max-width: 480px) {
+		/* @media screen and (max-width: 480px) {
 
 			ul.actions:not(.fixed) {
 				-moz-flex-direction: column;
@@ -2800,7 +2800,7 @@ input, select, textarea {
 							margin-left: -0.5rem;
 						}
 
-		}
+		} */
 
 /* Contact */
 
@@ -2864,7 +2864,7 @@ input, select, textarea {
 				padding-left: 0;
 			}
 
-		@media screen and (max-width: 480px) {
+		/* @media screen and (max-width: 480px) {
 
 			ul.menu > li {
 				border-left: 0;
@@ -2874,7 +2874,7 @@ input, select, textarea {
 				padding-left: 0;
 			}
 
-		}
+		} */
 
 /* Section/Article */
 
@@ -2938,7 +2938,7 @@ input, select, textarea {
 			width: calc(33.33333% - 2.5em);
 		}
 
-		@media screen and (max-width: 1680px) {
+		/* @media screen and (max-width: 1680px) {
 
 			.split > * {
 				width: calc(50% - 2em);
@@ -2999,7 +2999,7 @@ input, select, textarea {
 				padding: 3em 0 0 0;
 			}
 
-		}
+		} */
 
 /* Spotlights */
 
@@ -3101,7 +3101,7 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		@media screen and (max-width: 1680px) {
+		/* @media screen and (max-width: 1680px) {
 
 			.spotlights > section > .content {
 				padding: 4em 4em 2em 4em ;
@@ -3145,7 +3145,7 @@ input, select, textarea {
 				padding: 3em 2em 1em 2em ;
 			}
 
-		}
+		} */
 
 /* Table */
 
@@ -3227,7 +3227,7 @@ input, select, textarea {
 			width: 75em;
 		}
 
-			@media screen and (max-width: 1680px) {
+			/* @media screen and (max-width: 1680px) {
 
 				.wrapper > .inner {
 					padding: 4em 4em 2em 4em ;
@@ -3249,7 +3249,7 @@ input, select, textarea {
 					padding: 3em 2em 1em 2em ;
 				}
 
-			}
+			} */
 
 		.wrapper.alt {
 			background-color: #a87d7d;
@@ -3299,7 +3299,7 @@ input, select, textarea {
 				height: 100vh;
 			}
 
-			@media screen and (max-width: 1024px) {
+			/* @media screen and (max-width: 1024px) {
 
 				.wrapper.fullscreen {
 					min-height: calc(100vh - 2.5em);
@@ -3322,7 +3322,7 @@ input, select, textarea {
 						height: auto;
 					}
 
-			}
+			} */
 
 		.wrapper.fade-up > .inner {
 			-moz-transform: translateY(0);
@@ -3441,7 +3441,7 @@ input, select, textarea {
 							color: #ffffff;
 						}
 
-		@media screen and (max-width: 736px) {
+		/* @media screen and (max-width: 736px) {
 
 			#header {
 				padding: 1em 2em;
@@ -3476,7 +3476,7 @@ input, select, textarea {
 							line-height: 6em;
 						}
 
-		}
+		} */
 
 /* Wrapper (main) */
 
@@ -3484,7 +3484,7 @@ input, select, textarea {
 		margin-left: 18em;
 	}
 
-		@media screen and (max-width: 1024px) {
+		/* @media screen and (max-width: 1024px) {
 
 			#sidebar + #wrapper {
 				margin-left: 0;
@@ -3499,7 +3499,7 @@ input, select, textarea {
 				padding-top: 0;
 			}
 
-		}
+		} */
 
 	#header + #wrapper > .wrapper > .inner {
 		margin: 0 auto;
@@ -3511,13 +3511,13 @@ input, select, textarea {
 		margin-left: 18em;
 	}
 
-		@media screen and (max-width: 1024px) {
+		/* @media screen and (max-width: 1024px) {
 
 			#sidebar + #wrapper + #footer {
 				margin-left: 0;
 			}
 
-		}
+		} */
 
 	#footer > .inner a {
 		border-bottom-color: rgba(255, 255, 255, 0.15);
@@ -3540,7 +3540,6 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #a87d7d;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3553,6 +3552,12 @@ input, select, textarea {
 		z-index: 10000;
 		/* min-height: 100vh;
 		max-height: 100vh; */
+		background-color: #946767;
+		max-height: 100vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	
 	}
 
 		#sidebar > .inner {
@@ -3818,7 +3823,7 @@ input, select, textarea {
 			opacity: 0;
 		}
 
-		@media screen and (max-width: 1024px) {
+		/* @media screen and (max-width: 1024px) {
 
 			#sidebar {
 				height: 3.5em;
@@ -3886,7 +3891,7 @@ input, select, textarea {
 				display: none;
 			}
 
-		}
+		} */
 
 /* Intro */
 
@@ -3902,7 +3907,7 @@ input, select, textarea {
 			font-size: 1.25em;
 		}
 
-			@media screen and (max-width: 980px) {
+			/* @media screen and (max-width: 980px) {
 
 				#intro p br {
 					display: none;
@@ -3924,7 +3929,7 @@ input, select, textarea {
 				background-attachment: scroll;
 			}
 
-		}
+		} */
 
 
 body {
@@ -3960,11 +3965,26 @@ p {
 
 .nav-link {
 	font-size: 30px;
+	margin: 0px;
+	padding: 0px;
 }
 
-#sidebar {
-	background-color: #946767;
+#sidebar nav a {
+	padding: 0px;
 }
+
+nav {
+
+	height: 70vh;
+}
+
+nav ul {
+	display: flex;
+	height: 100%;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
 
 .app-icon {
 	filter: opacity(70%);
@@ -4082,12 +4102,7 @@ color: #c99595;
 	width: 50%;
 }
 
-#sidebar {
-	max-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
+
 
 
 #sidebar > .inner {
@@ -4096,7 +4111,7 @@ color: #c99595;
 
 
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
 
 	nav > ul {
 		width: 100vw !important;
@@ -4121,7 +4136,7 @@ color: #c99595;
 
 
 
-}
+} */
 
 
 .button {
@@ -4152,4 +4167,6 @@ color: #c99595;
 	flex-direction: column;
 	justify-content: center;
 }
+
+
 
