--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,11 +116,11 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.55);
+		color: rgb(255, 233, 233) !important;
 		font-family: Arial, Helvetica, sans-serif;
-		font-size: 16.5pt;
+		font-size: 13pt;
 		font-weight: normal;
-		line-height: 1.75;
+		line-height: 1.50;
 	}
 
 		/* @media screen and (max-width: 1680px) {
@@ -172,13 +172,13 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 1.5em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: bold;
-		line-height: 1.5;
+		line-height: 1;
 		margin: 0 0 0.5em 0;
 	}
 
@@ -188,7 +188,7 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 2.75em;
+		font-size: 2.5em;
 	}
 
 		h1.major {
@@ -216,7 +216,7 @@ input, select, textarea {
 			}
 
 	h2 {
-		font-size: 1.75em;
+		font-size: 1.5em;
 	}
 
 	h3 {
@@ -2276,13 +2276,7 @@ input, select, textarea {
 					width: calc(50% - 0.75em);
 				}
 
-				form > .fields > .field.third {
-					width: calc(100%/3 - 0.5em);
-				}
 
-				form > .fields > .field.quarter {
-					width: calc(25% - 0.375em);
-				}
 
 		/* @media screen and (max-width: 480px) {
 
@@ -2310,14 +2304,7 @@ input, select, textarea {
 
 		} */
 
-	label {
-		color: #ffffff;
-		font-weight: bold;
-		line-height: 1.5;
-		margin: 0 0 0.7em 0;
-		display: block;
-		font-size: 1.1em;
-	}
+
 
 	input[type="text"],
 	input[type="password"],
@@ -2329,16 +2316,17 @@ input, select, textarea {
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(255, 255, 255, 0.05);
+		background: rgba(255, 255, 255, 0.13);
 		border-radius: 0.25em;
 		border: none;
-		border: solid 1px rgba(255, 255, 255, 0.15);
+		border: solid 1px rgb(238, 199, 199);
 		color: inherit;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
 		text-decoration: none;
 		width: 100%;
+
 	}
 
 		input[type="text"]:invalid,
@@ -2479,22 +2467,22 @@ input, select, textarea {
 	}
 
 	::-webkit-input-placeholder {
-		color: rgba(255, 255, 255, 0.35) !important;
+		color: rgb(255, 233, 233) !important;
 		opacity: 1.0;
 	}
 
 	:-moz-placeholder {
-		color: rgba(255, 255, 255, 0.35) !important;
+		color: rgb(255, 233, 233) !important;
 		opacity: 1.0;
 	}
 
 	::-moz-placeholder {
-		color: rgba(255, 255, 255, 0.35) !important;
+		color: rgb(255, 233, 233) !important;
 		opacity: 1.0;
 	}
 
 	:-ms-input-placeholder {
-		color: rgba(255, 255, 255, 0.35) !important;
+		color: rgb(255, 233, 233) !important;
 		opacity: 1.0;
 	}
 
@@ -3224,7 +3212,6 @@ input, select, textarea {
 		.wrapper > .inner {
 			padding: 5em 5em 3em 5em ;
 			max-width: 100%;
-			width: 75em;
 		}
 
 			/* @media screen and (max-width: 1680px) {
@@ -3937,7 +3924,7 @@ body {
 }
 
 p {
-	color: #f5d7d7
+	color: #ffecec
 }
 
 .skills-card{
@@ -4063,7 +4050,7 @@ color: #c99595;
 }
 
 .button:hover {
-	color: #da7070;
+	color: #ce6a6a;
 	}
 
 
@@ -4150,13 +4137,12 @@ color: #c99595;
 .myapp-card {
 	padding: 10px;
 	height: 350px;
-	width: 100%;
 }
 
 
 .app-image {
 	object-position: 0px 0px;
-	width:500px;
+	width:400px;
 	height: 100%;
 	object-fit: cover;
 }
@@ -4170,3 +4156,138 @@ color: #c99595;
 
 
 
+/* ----------- Tablets ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  /* and (min-device-width: 768px)  */
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+
+	/* body {
+		border: 5px solid orange;
+
+		width: 100vw;
+		margin: 0px;
+		padding: 0px;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+	
+	body > * {
+		border: 5px solid blue;
+		width: 100vw;
+
+	}
+
+	#sidebar {
+		border: 5px solid red;
+		position: static;
+		display: flex;
+		flex-direction: row;
+		width: 100vw;
+		margin: 0;
+		padding: 0;
+
+
+	}
+
+	nav ul {
+		display: flex;
+		flex-direction: row;
+	}
+
+	#intro {
+
+		margin: 0;
+		padding: 0;
+		left: 0px;
+	} */
+
+	.wrapper {
+	position: sticky;
+	}
+
+	.app-content > p {
+		display: none;
+	}
+
+
+	.myapp-card {
+		width: auto;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+
+	.app-image {
+		width: 100%;
+	}
+
+	.form-contact {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		margin: 0px;
+		padding: 0px;
+	}
+
+	.form-contact > section {
+		width: 100%;
+		margin: 0px;
+		padding: 0px;
+		border: none;
+	}
+
+	.split.style1 > :nth-child(2n - 1) {
+    width: 100%;
+	}
+
+	.split > :nth-child(2n - 1) {
+    padding-right: 0px;
+    border-right: none;
+	}
+
+	.split > :nth-child(2n) {
+    padding-left: 0px;
+	}
+
+	.split.style1 > :nth-child(2n) {
+    width: 100%;
+	}
+
+	.wrapper > .inner {
+    padding: 2em;	
+	}	
+
+	
+	#sidebar {
+		min-width: 150px;
+		max-width: 150px;
+	}
+
+	.nav-link {
+		font-size: 20px;
+	}
+
+	#sidebar nav a:before, #sidebar nav a:after, .logo {
+    display: none;
+	}
+
+
+}
+
+
+
+/* ----------- Mobiles ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 768px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
